# nexttui

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.en.md  README.md  devstack-vm.yaml  rust-toolchain.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: devflow-guard.sh
.github/workflows/: ci.yml
devflow-docs/: audit.md  backlog.md  devflow-state-archived-20260324-132401.md  devflow-state-archived-20260327-110000.md  devflow-state.md  openstack-api-spec.json  session-summary-archived-20260324-162442.md  session-summary-archived-20260324-173206.md  session-summary.md
devflow-docs/inception/: agent-council-review.md  application-design-ui-redesign.md  application-design.md  detail-design-domain-nfr.md  detail-design-port-adapter.md  detail-design-ui-input.md  detail-design.md  nfr-requirements.md  requirements-41.md  requirements.md  requirements_scope_backgroud.md  ui-redesign-analysis.md  units-ui-redesign.md  units.md  user-stories.md  workflow-plan-41.md  workflow-plan-ui-redesign.md  workflow-plan.md  workspace.md
docs/: git-blame-hygiene-in-ai-devflow.md
docs/plans/: 2026-03-18-async-event-architecture-design.md  2026-04-03-host-module-design.md  2026-04-03-host-module-plan.md  Evacuate_SPEC.md
scripts/: devstack-prep.sh  rewrite_catalog.py
src/: action.rs  app.rs  background.rs  component.rs  config.rs  demo.rs  error.rs  event.rs  event_loop.rs  lib.rs  main.rs  registry.rs  router.rs  worker.rs
src/adapter/: mod.rs  registry.rs
src/context/: action_channel.rs  cancellation.rs  capabilities.rs  config_cloud_directory.rs  epoch.rs  error.rs  history.rs  mod.rs  resolver.rs  state_machine.rs  static_project_directory.rs  switcher.rs  types.rs  versioned.rs
src/infra/: audit.rs  cache.rs  catalog.rs  cross_project_audit.rs  cross_project_guard.rs  cross_tenant.rs  mod.rs  rbac.rs  transition_guard.rs
src/input/: command.rs  keymap.rs  mod.rs  search.rs
src/models/: cinder.rs  common.rs  glance.rs  keystone.rs  mod.rs  neutron.rs  nova.rs
src/module/: mod.rs
src/port/: auth.rs  cinder.rs  context_session.rs  error.rs  glance.rs  http_endpoint_cache.rs  keystone.rs  keystone_rescope.rs  mock.rs  mock_context.rs  mod.rs  neutron.rs  nova.rs  scoped_auth.rs  types.rs
src/ui/: activity_log.rs  confirm.rs  context_indicator.rs  cross_project_toast.rs  detail_view.rs  form.rs  (+12 more)
tests/: devstack_directory.rs
(+110 files in other folders)
