[package]
name = "nexttui"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-util = "0.7.18"
unicode-width = "0.2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"

[features]
# Gated integration tests that require a live devstack container.
# NOT default — local `cargo test` never runs these.
# CI activates via: cargo test --test devstack_directory --features devstack-integration
devstack-integration = []

[dev-dependencies]
http = "1.4.0"
tempfile = "3"
